# hierarchical-graphs

./: hierarchical_graphs.ipynb  pyproject.toml
hg/: __init__.py
hierarchical_graph/: __init__.py  core.py
