[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "energy-plus-utility"
version = "0.1.0"
requires-python = ">=3.9"
description = "Hierarchical graph creation and visualizayion."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Mugalan", email = "mugalan@gmail.com" }]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0,<3.0",
  "plotly>=5,<6",
  "simdkalman==1.0.2",
  "matplotlib>=3.7"
]

packages = ["hg"]
include  = ["README.md", "LICENSE"]
