[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hierarchical-graphs"
version = "0.1.0"
requires-python = ">=3.9"
description = "A utility for hierarchical graph creation and visualizayion."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Mugalan", email = "mugalan@gmail.com" }]

dependencies = [
    "pandas>=1.3",
    "networkx>=2.8",
    "graphviz>=0.20.1",
    "pydantic>=2.1",
    "ipython"  # for IPython.display
]

[project.urls]
Homepage = "https://github.com/yourusername/hierarchical-graph"
Repository = "https://github.com/yourusername/hierarchical-graph"

[tool.setuptools.packages.find]
where = ["hierarchical_graph"]
