[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierarchical-graphs"

version = "0.1.0"
description = "A utility for hierarchical graph creation and visualization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  { name = "Mugalan", email = "mugalan@gmail.com" }
]

dependencies = [
  "pandas>=1.3",
  "networkx>=2.8",
  "graphviz>=0.20.1",
  "pydantic>=2.1",
  "ipython"
]

[project.urls]
Repository = "https://github.com/mugalan/hierarchical-graphs"

[tool.setuptools.packages.find]
where = ["hierarchical_graph"]

